# mraof-exercism-solutions

./: .gitignore  download_all.sh
ruby/: .gitignore
rust/: Cargo.toml
rust/accumulate/src/: lib.rs
rust/accumulate/tests/: accumulate.rs
rust/acronym/: Cargo.toml
rust/acronym/src/: lib.rs
rust/acronym/tests/: acronym.rs
rust/all-your-base/src/: lib.rs
rust/all-your-base/tests/: all-your-base.rs
rust/allergies/src/: lib.rs
rust/alphametics/src/: lib.rs
rust/alphametics/tests/: alphametics.rs
rust/anagram/: Cargo.toml
rust/anagram/src/: lib.rs
rust/armstrong-numbers/src/: lib.rs
rust/atbash-cipher/src/: lib.rs
rust/beer-song/src/: lib.rs
rust/bob/src/: lib.rs
rust/clock/src/: lib.rs
rust/collatz-conjecture/src/: lib.rs
rust/difference-of-squares/src/: lib.rs
rust/diffie-hellman/: Cargo.toml
rust/diffie-hellman/src/: lib.rs
rust/dot-dsl/src/: lib.rs
rust/dot-dsl/tests/: dot-dsl.rs
rust/fizzy/src/: lib.rs
rust/grains/src/: lib.rs
rust/isbn-verifier/src/: lib.rs
rust/isogram/src/: lib.rs
rust/leap/src/: lib.rs
rust/luhn-from/src/: lib.rs
rust/luhn-trait/src/: lib.rs
rust/luhn/src/: lib.rs
rust/matching-brackets/src/: lib.rs
rust/nth-prime/src/: lib.rs
rust/perfect-numbers/src/: lib.rs
rust/prime-factors/: Cargo.toml
rust/prime-factors/src/: lib.rs
rust/protein-translation/src/: lib.rs
rust/proverb/src/: lib.rs
rust/pythagorean-triplet/src/: lib.rs
rust/raindrops/src/: lib.rs
rust/run-length-encoding/src/: lib.rs
rust/saddle-points/src/: lib.rs
rust/say/src/: lib.rs
rust/series/src/: lib.rs
(+45 files in other folders)
