[workspace]
members = [
	"accumulate",
	"acronym",
	"allergies",
	"all-your-base",
	"alphametics",
	"anagram",
	"armstrong-numbers",
	"atbash-cipher",
	"beer-song",
	"binary-search",
	"bob",
	"bowling",
	"clock",
	"collatz-conjecture",
	"crypto-square",
	"diamond",
	"difference-of-squares",
	"diffie-hellman",
	"dot-dsl",
	"etl",
	"fizzy",
	"gigasecond",
	"grade-school",
	"grains",
	"hamming",
	"hello-world",
	"isbn-verifier",
	"isogram",
	"largest-series-product",
	"leap",
	"luhn",
	"luhn-from",
	"luhn-trait",
	"matching-brackets",
	"nth-prime",
	"nucleotide-count",
	"paasio",
	"palindrome-products",
	"pangram",
	"pascals-triangle",
	"perfect-numbers",
	"phone-number",
	"pig-latin",
	"prime-factors",
	"protein-translation",
	"proverb",
	"pythagorean-triplet",
	"queen-attack",
	"rail-fence-cipher",
	"raindrops",
	"reverse-string",
	"rna-transcription",
	"robot-simulator",
	"roman-numerals",
	"rotational-cipher",
	"run-length-encoding",
	"saddle-points",
	"say",
	"scrabble-score",
	"series",
	"sieve",
	"simple-cipher",
	"simple-linked-list",
	"spiral-matrix",
	"sum-of-multiples",
	"tournament",
	"triangle",
	"two-bucket",
	"variable-length-quantity",
	"word-count",
	]
